# prospector

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-06-16-job-finding-agent.md
docs/superpowers/specs/: 2026-06-16-job-finding-agent-design.md
job_agent/: cli.py  config.py  models.py  store.py
job_agent/connectors/: base.py  bigset.py  web_search.py
job_agent/llm/: client.py  prompts.py
job_agent/output/: compiler.py
job_agent/stages/: matching.py  outreach.py  people_finding.py  report.py  resume_tailoring.py  review.py  sourcing.py
prospector/: cli.py  config.py  models.py  resume.py  store.py
prospector/connectors/: base.py  bigset.py  web_search.py
prospector/llm/: prompts.py
prospector/output/: compiler.py
prospector/stages/: matching.py  outreach.py  people_finding.py  report.py  resume_tailoring.py  review.py  sourcing.py
tests/: conftest.py  test_compiler.py  test_config.py  test_connectors.py  test_llm_client.py  test_matching.py  test_models.py  test_outreach.py  test_people_finding.py  test_prompts.py  test_report.py  test_resume.py  test_resume_tailoring.py  test_review.py  test_smoke.py  test_sourcing.py  test_store.py
tests/fixtures/: bigset_export.csv  sample_resume.txt
